Add autosave, presentation markers

--- a/index.html
+++ b/index.html
@@ -1050,6 +1050,13 @@
                             📊
                         </button>
                         <div style="width: 1px; height: 16px; background: #ccc; margin: 0 4px;"></div>
+                        <button id="auto-slide-markers-btn" class="toolbar-btn" title="Add Slide Markers to Paragraphs" style="padding: 3px 5px; border: 1px solid #ccc; background: white; border-radius: 3px; cursor: pointer; font-size: 10px;">
+                            📄→
+                        </button>
+                        <button id="remove-slide-markers-btn" class="toolbar-btn" title="Remove All Slide Markers" style="padding: 3px 5px; border: 1px solid #ccc; background: white; border-radius: 3px; cursor: pointer; font-size: 10px;">
+                            📄✖️
+                        </button>
+                        <div style="width: 1px; height: 16px; background: #ccc; margin: 0 4px;"></div>
                         <span style="font-size: 11px; color: #666;">Format</span>
                         <div style="width: 1px; height: 16px; background: #ccc; margin: 0 4px;"></div>
                         <button id="fold-all-btn" class="toolbar-btn" title="Fold All Sections (Ctrl+K, Ctrl+0)" style="padding: 3px 5px; border: 1px solid #ccc; background: white; border-radius: 3px; cursor: pointer; font-size: 11px;">
