Add TODO Kanban support.

--- a/index.html
+++ b/index.html
@@ -1000,8 +1000,13 @@
                     <button id="presentation-mode-btn" class="mode-btn" style="padding: 6px 16px; border: none; background: transparent; color: #666; border-radius: 4px; cursor: pointer; font-size: 12px;">Presentation</button>
                 </div>
                 
-                <!-- Spacer for balance -->
-                <div style="width: 200px;"></div>
+                <!-- Pane Toggle Controls -->
+                <div style="display: flex; gap: 4px; align-items: center;">
+                    <span style="font-size: 11px; color: #666; margin-right: 4px;">Panes:</span>
+                    <button id="toggle-sidebar-btn" class="btn" title="Toggle Files/Structure Pane" style="padding: 4px 8px; font-size: 11px; background: #007acc; color: white; border-radius: 3px;">📁</button>
+                    <button id="toggle-editor-btn" class="btn" title="Toggle Editor Pane" style="padding: 4px 8px; font-size: 11px; background: #007acc; color: white; border-radius: 3px;">📝</button>
+                    <button id="toggle-preview-btn" class="btn" title="Toggle Preview Pane" style="padding: 4px 8px; font-size: 11px; background: #007acc; color: white; border-radius: 3px;">👁</button>
+                </div>
             </div>
 
             <!-- Editor Content -->
