--- a/index.html
+++ b/index.html
@@ -1064,6 +1064,19 @@
                         <button id="insert-speaker-notes-btn" class="toolbar-btn" title="Insert Speaker Notes Template" style="padding: 3px 5px; border: 1px solid #ccc; background: white; border-radius: 3px; cursor: pointer; font-size: 10px;">
                             📝
                         </button>
+                        
+                        <!-- Annotation Controls -->
+                        <div style="width: 1px; height: 16px; background: #ccc; margin: 0 4px;"></div>
+                        <button id="insert-comment-annotation-btn" class="toolbar-btn" title="Insert Comment Annotation" style="padding: 3px 5px; border: 1px solid #ccc; background: white; border-radius: 3px; cursor: pointer; font-size: 10px;">
+                            💬
+                        </button>
+                        <button id="insert-highlight-annotation-btn" class="toolbar-btn" title="Insert Highlight Annotation" style="padding: 3px 5px; border: 1px solid #ccc; background: white; border-radius: 3px; cursor: pointer; font-size: 10px;">
+                            🟡
+                        </button>
+                        <button id="insert-block-annotation-btn" class="toolbar-btn" title="Insert Block Annotation" style="padding: 3px 5px; border: 1px solid #ccc; background: white; border-radius: 3px; cursor: pointer; font-size: 10px;">
+                            📋
+                        </button>
+                        
                         <div style="width: 1px; height: 16px; background: #ccc; margin: 0 4px;"></div>
                         <span style="font-size: 11px; color: #666;">Format</span>
                         <div style="width: 1px; height: 16px; background: #ccc; margin: 0 4px;"></div>
