--- a/index.html
+++ b/index.html
@@ -1154,16 +1154,21 @@
                         <div id="preview-pane" class="content-pane">
                             <div id="preview-content"></div>
                         </div>
-                        <div id="chat-pane" class="content-pane" style="display: none; height: 100%; padding: 16px; flex-direction: column;">
-                            <div id="chat-messages" style="flex: 1; overflow-y: auto; margin-bottom: 16px;"></div>
-                            <div class="chat-input-area" style="display: flex; flex-direction: column; gap: 8px;">
-                                <div style="display: flex; gap: 8px;">
-                                    <button id="load-editor-to-chat-btn" class="btn" title="Load Editor Content">Load Editor</button>
-                                    <button id="copy-ai-response-btn" class="btn" title="Copy last AI response to editor">Copy to Editor</button>
-                                </div>
-                                <div style="display: flex; gap: 8px;">
-                                    <textarea id="chat-input" placeholder="Ask the AI..." style="flex: 1; min-height: 60px; resize: vertical;"></textarea>
-                                    <button id="chat-send-btn" class="btn">Send</button>
+                        <div id="chat-pane" class="content-pane terminal-chat" style="display: none;">
+                            <div class="terminal-header">
+                                <span class="terminal-title">AI Assistant Terminal</span>
+                                <span class="terminal-subtitle" id="chat-context-display">Type /help for commands</span>
+                            </div>
+                            <div id="chat-messages" class="terminal-output" style="flex: 1; overflow-y: auto; margin-bottom: 16px;"></div>
+                            <div class="terminal-input-area" style="display: flex; align-items: center; gap: 8px;">
+                                <span class="terminal-prompt-line">
+                                    <span class="terminal-user">user@hegel-ai</span><span class="terminal-separator">:</span><span class="terminal-path">~/</span><span class="terminal-dollar">$</span>
+                                </span>
+                                <input type="text" id="chat-input" class="terminal-input" placeholder="Enter command or message..." style="flex: 1;">
+                                <div class="terminal-buttons" style="display: flex; gap: 4px;">
+                                    <button id="restart-chat-btn" class="btn btn-small" title="Start new chat session">🔄</button>
+                                    <button id="load-editor-to-chat-btn" class="btn btn-small" title="Load Editor Content">📝</button>
+                                    <button id="copy-ai-response-btn" class="btn btn-small" title="Copy last AI response to editor">📋</button>
                                 </div>
                             </div>
                         </div>
