Fix HTML export

--- a/lectures/lecture-1.html
+++ b/lectures/lecture-1.html
@@ -188,7 +188,8 @@
     }  </style>
 </head>
 <body>
-<h1 id="human-and-machine-learning">Human and Machine Learning</h1>
+<h1 id="machine-learning-and-human-learning">Machine Learning and Human
+Learning</h1>
 <h2 id="overview">Overview</h2>
 <hr />
 <h2 id="comparative-analysis-of-human-and-machine-learning">Comparative
