Add whole/part visualization pane with concept relationship diagrams
- Added new Relations pane alongside Preview, AI Chat, Search, and Notes
- Integrated 9 different visualization types from wholepart folder
- Auto-extracts concepts from current document (lists, headers, etc.)
- Interactive controls for animation, zoom, and visualization switching
- Fixed D3.js CSP issue by using cdnjs.cloudflare.com
- Shows relationships between concepts and the whole (course/syllabus)

--- a/index.html
+++ b/index.html
@@ -1488,7 +1488,7 @@
     <script src="orchestrator/modules/speakerNotes.js" defer></script>
     <script src="orchestrator/modules/autosave.js" defer></script>
     <!-- D3.js for whole/part visualizations -->
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
     <script src="orchestrator/modules/wholepart.js" defer></script>
     <script src="orchestrator/modules/dragdrop.js" defer></script>
     <script src="orchestrator/modules/previewZoom.js" defer></script>
