--- a/index.html
+++ b/index.html
@@ -1490,6 +1490,7 @@
     <!-- D3.js for whole/part visualizations -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
     <script src="orchestrator/modules/wholepart.js" defer></script>
+    <script src="orchestrator/modules/gamification.js" defer></script>
     <script src="orchestrator/modules/dragdrop.js" defer></script>
     <script src="orchestrator/modules/previewZoom.js" defer></script>
     <script src="orchestrator/modules/fileFilters.js" defer></script>
