Fix lists / nested list auto-numbering

--- a/lectures/lecture-1.html
+++ b/lectures/lecture-1.html
@@ -190,7 +190,71 @@
 <body>
 <h1 id="machine-learning-and-human-learning">Machine Learning and Human
 Learning</h1>
+<h2 id="readings">Readings</h2>
+<p>None for Week 1!</p>
+<h2 id="assessment">Assessment</h2>
+<p>Comment on any of the following questions: - What does it mean to
+learn? How do you know when human learning happens: in the classroom,
+workplace or life? - Machine learning is clearly inspired by human
+learning. In your use of AI to date, how would you describe what it has
+learned (memorized, regurgitated, etc)? When AI gets things wrong, how
+are its errors different (or similar) to human mistakes? - I have
+introduced the concept of “synthesis” to describe the similarities and
+differences between machine and human learning. What are your views?</p>
+<h2 id="structure">Structure</h2>
+<ol type="1">
+<li>Outline of the Course - Circular Structure</li>
+</ol>
+<ul>
+<li>[[lecture-concepts]]</li>
+</ul>
+<ol start="2" type="1">
+<li>Weekly Format</li>
+</ol>
+<ul>
+<li>Mix of theory (lectures) / practice / discussion</li>
+</ul>
+<ol type="1">
+<li>Assessments</li>
+<li>A previous version of this course ran in 2023 and 2024:
+[[2023-Course]]</li>
+<li>Lens: Hegelian Philosophy. Why Hegel?</li>
+</ol>
+<ul>
+<li>basic hypothesis: machine learning is rooted in 18th century
+empiricism (more data = more truth)</li>
+<li>What does Hegel offer? One way to think about learning as
+<em>nonlinear</em> (structured / dialectical / involving negation etc).
+This is important for later pedagogical theorists such as Dewey,
+Vygotsky and Piaget – Hegel’s influence on these thinkers (and their
+general critique of mechanical learning will become clear).</li>
+<li>This will hopefully become clear! We start with the idea of
+synthesis between machine learning and human learning, then go down
+several rabbit holes, before returning, in Week 8, to a modified idea of
+synthesis.</li>
+</ul>
+<ol start="6" type="1">
+<li><p>8 Weeks = 8 Concepts</p></li>
+<li><p>Discussion</p></li>
+<li><p>as</p></li>
+<li><p>asdf</p></li>
+<li><p>asd</p></li>
+<li><p>asdf</p></li>
+</ol>
 <h2 id="overview">Overview</h2>
+<p>Welcome to Machine Learning and Human Learning!</p>
+<p>In this course we’ll be exploring these two related – but also very
+distinct – ideas. This week I’ll provide an overview of the course,
+readings, approach and assessment. I’ll also be introducing the work of
+Hegel, an Enlightenment-era German philosopher who will supply an
+important lens onto many of the questions posed by machines which
+purport to learn.</p>
+<p>We’ll also have a general open discussion about machine learning and
+human learning: what unites them, and what distinguishes them. In true
+dialectical fashion, we will then think about what possible synthesis we
+might see between these two modalities of learning. Part of this
+discussion will involve, naturally enough, a machine that will be
+joining us – GPT-5 – to share its views.</p>
 <hr />
 <h2 id="comparative-analysis-of-human-and-machine-learning">Comparative
 Analysis of Human and Machine Learning</h2>
@@ -206,23 +270,20 @@ understanding learning processes.</li>
 </ul>
 <pre class="notes"><code>This course presents an outline of human and machine learning. As the title suggests, this involves a process of comparison and contrast: what is common to both human and machine learning, and what distinguishes them. </code></pre>
 <hr />
-<h2 id="philosophy">philosophy</h2>
-<p>This process is something that, for this course, I want to approach
-in a philosophical way. What I mean by this is that, alongside texts
-from areas of child psychology, linguistics and computer science, I want
-us to investigate the idea of “learning” through a fundamentally
-<em>philosophical</em> type of inquiry. This I think leads us to think
-about less about learning as a set of features that pertain to humans,
-machines or both, and more about learning as itself a process that
-ranges across a set of common distinctions: between human and machine,
-but also between individual and society, between child and adult, and so
-on. It will also help us, I hope, to think about learning as something
-cooperative, involving both social and technical, or what are sometimes
-thought as sociotechnical systems. I’ve coined the term “symbiotic
-pedagogy” to describe this kind of cooperation. Finally, we might
-conclude by developing some normative claims: about what constitutes
-legitimate as opposed to illegitimate forms of human and machine
-learning.</p>
+<h2
+id="philosophical-inquiry-into-learning-and-symbiotic-pedagogy">Philosophical
+Inquiry into Learning and Symbiotic Pedagogy</h2>
+<ul>
+<li>Treat learning as a philosophical question alongside child
+psychology, linguistics, and computer science.</li>
+<li>Reframe learning from a set of features to a process that traverses
+key distinctions (human/machine, individual/society, child/adult).</li>
+<li>Emphasize cooperative, sociotechnical dynamics captured by the term
+“symbiotic pedagogy.”</li>
+<li>Develop normative criteria to distinguish legitimate from
+illegitimate forms of human and machine learning.</li>
+</ul>
+<pre class="notes"><code>This process is something that, for this course, I want to approach in a philosophical way. What I mean by this is that, alongside texts from areas of child psychology, linguistics and computer science, I want us to investigate the idea of &quot;learning&quot; through a fundamentally *philosophical* type of inquiry. This I think leads us to think about less about learning as a set of features that pertain to humans, machines or both, and more about learning as itself a process that ranges across a set of common distinctions: between human and machine, but also between individual and society, between child and adult, and so on. It will also help us, I hope, to think about learning as something cooperative, involving both social and technical, or what are sometimes thought as sociotechnical systems. I&#39;ve coined the term &quot;symbiotic pedagogy&quot; to describe this kind of cooperation. Finally, we might conclude by developing some normative claims: about what constitutes legitimate as opposed to illegitimate forms of human and machine learning.</code></pre>
 <hr />
 <p>The presentation of the course will be unusual. I plan to develop and
 deliver the lecture material offline, and then use the weekly hour
@@ -339,8 +400,6 @@ dramatically – and which we need to insist upon still having some agency
 in that process of transformation. This will be what I hope is the
 practical payoff for an otherwise arduous conceptual journey through the
 world of Hegelian philosophy.</p>
-<p>[[stochastic_society]]</p>
-<p>[[2+2=5]]</p>
 <p>Authors:</p>
 <p><span class="citation"
 data-cites="hegel2025phenomenology kojeve1980introduction hyppolite1974genesis houlgate2012hegel heidegger1988hegel pippin2010hegel hegel2014science vzivzek2020hegel">(G.
