Basic ToC Implementation

--- a/index.html
+++ b/index.html
@@ -1157,6 +1157,12 @@
                         <button id="insert-speaker-notes-btn" class="toolbar-btn" title="Insert Speaker Notes Template" style="padding: 3px 5px; border: 1px solid #ccc; background: white; border-radius: 3px; cursor: pointer; font-size: 10px;">
                             📝
                         </button>
+                        <button id="insert-toc-btn" class="toolbar-btn" title="Insert Table of Contents" style="padding: 3px 5px; border: 1px solid #ccc; background: white; border-radius: 3px; cursor: pointer; font-size: 10px;">
+                            📑+
+                        </button>
+                        <button id="remove-toc-btn" class="toolbar-btn" title="Remove Table of Contents" style="padding: 3px 5px; border: 1px solid #ccc; background: white; border-radius: 3px; cursor: pointer; font-size: 10px;">
+                            📑✖️
+                        </button>
                         
                         <!-- Annotation Controls -->
                         <div style="width: 1px; height: 16px; background: #ccc; margin: 0 4px;"></div>
