Updated gamification system

--- a/index.html
+++ b/index.html
@@ -1503,6 +1503,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
     <script src="orchestrator/modules/wholepart.js" defer></script>
     <script src="orchestrator/modules/gamification.js" defer></script>
+    <script src="orchestrator/modules/collaborative-challenges.js" defer></script>
+    <script src="orchestrator/modules/challenges-ui.js" defer></script>
     <script src="orchestrator/modules/dragdrop.js" defer></script>
     <script src="orchestrator/modules/previewZoom.js" defer></script>
     <script src="orchestrator/modules/fileFilters.js" defer></script>
