AI gamification tools

--- a/index.html
+++ b/index.html
@@ -1243,6 +1243,7 @@
                                 <input type="text" id="chat-input" class="terminal-input" placeholder="Enter command or message..." style="flex: 1;">
                                 <div class="terminal-buttons" style="display: flex; gap: 4px;">
                                     <button id="restart-chat-btn" class="btn btn-small" title="Start new chat session">🔄</button>
+                                    <button id="load-editor-to-chat-btn" class="btn btn-small" title="Load current editor content into chat">📝</button>
                                     <button id="copy-ai-response-btn" class="btn btn-small" title="Insert last AI response at cursor position">📋</button>
                                 </div>
                             </div>
@@ -1505,6 +1506,8 @@
     <script src="orchestrator/modules/gamification.js" defer></script>
     <script src="orchestrator/modules/collaborative-challenges.js" defer></script>
     <script src="orchestrator/modules/challenges-ui.js" defer></script>
+    <script src="orchestrator/modules/ai-writing-companion.js" defer></script>
+    <script src="orchestrator/modules/ai-flow-detection.js" defer></script>
     <script src="orchestrator/modules/dragdrop.js" defer></script>
     <script src="orchestrator/modules/previewZoom.js" defer></script>
     <script src="orchestrator/modules/fileFilters.js" defer></script>
