Initial TODO gamification

--- a/index.html
+++ b/index.html
@@ -1508,6 +1508,7 @@
     <script src="orchestrator/modules/challenges-ui.js" defer></script>
     <script src="orchestrator/modules/ai-writing-companion.js" defer></script>
     <script src="orchestrator/modules/ai-flow-detection.js" defer></script>
+    <script src="orchestrator/modules/todo-gamification.js" defer></script>
     <script src="orchestrator/modules/dragdrop.js" defer></script>
     <script src="orchestrator/modules/previewZoom.js" defer></script>
     <script src="orchestrator/modules/fileFilters.js" defer></script>
